syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "user.proto";

option go_package = "github.com/Nickeymaths/bank/pb";

message LoginUserRequest {
    string username = 1;               
    string password = 2;
}

message LoginUserResponse {
    User user = 1;
    string session_id = 2;
    string access_token = 3;
    google.protobuf.Timestamp access_token_created_at = 4;
    string refresh_token = 5;
    google.protobuf.Timestamp refresh_token_created_at = 6;
}
